[package]
name = "pallet-beefy-mmr-test"
description = "Beefy mmr tests for compatibility with snowbridge light client"
version = "0.2.0"
authors = ["Snowfork <contact@snowfork.com>"]
edition.workspace = true
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]

[lints]
workspace = true

[dependencies]
array-bytes = { version = "6.2.2", optional = true }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
log = { workspace = true }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
serde = { optional = true, workspace = true, default-features = true }
binary-merkle-tree = { path = "../../../../substrate/utils/binary-merkle-tree", default-features = false }
frame-support = { path = "../../../../substrate/frame/support", default-features = false }
frame-system = { path = "../../../../substrate/frame/system", default-features = false }
pallet-beefy = { path = "../../../../substrate/frame/beefy", default-features = false }
pallet-beefy-mmr = { path = "../../../../substrate/frame/beefy-mmr", default-features = false }
pallet-mmr = { path = "../../../../substrate/frame/merkle-mountain-range", default-features = false }
pallet-session = { path = "../../../../substrate/frame/session", default-features = false }
sp-consensus-beefy = { path = "../../../../substrate/primitives/consensus/beefy", default-features = false }
sp-core = { path = "../../../../substrate/primitives/core", default-features = false }
sp-io = { path = "../../../../substrate/primitives/io", default-features = false }
sp-runtime = { path = "../../../../substrate/primitives/runtime", default-features = false }
sp-std = { path = "../../../../substrate/primitives/std", default-features = false }
sp-api = { path = "../../../../substrate/primitives/api", default-features = false }
sp-state-machine = { path = "../../../../substrate/primitives/state-machine", default-features = false }

[dev-dependencies]
array-bytes = "6.2.2"
sp-staking = { path = "../../../../substrate/primitives/staking" }

[features]
default = ["std"]
std = [
	"array-bytes",
	"binary-merkle-tree/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-beefy-mmr/std",
	"pallet-beefy/std",
	"pallet-mmr/std",
	"pallet-session/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-consensus-beefy/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-state-machine/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-beefy/try-runtime",
	"pallet-mmr/try-runtime",
	"pallet-session/try-runtime",
	"sp-runtime/try-runtime",
]
