[package]
name = "snowbridge-inbound-queue-runtime-api"
description = "Snowbridge Inbound Queue Runtime API"
version = "0.2.0"
authors = ["Snowfork <contact@snowfork.com>"]
edition.workspace = true
repository.workspace = true
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { version = "3.1.5", package = "parity-scale-codec", features = ["derive"], default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
sp-std = { path = "../../../../../substrate/primitives/std", default-features = false }
sp-api = { path = "../../../../../substrate/primitives/api", default-features = false }
frame-support = { path = "../../../../../substrate/frame/support", default-features = false }
snowbridge-core = { path = "../../../primitives/core", default-features = false }
snowbridge-router-primitives = { path = "../../../primitives/router", default-features = false }
xcm = { package = "staging-xcm", path = "../../../../../polkadot/xcm", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"scale-info/std",
	"snowbridge-core/std",
	"snowbridge-router-primitives/std",
	"sp-api/std",
	"sp-std/std",
	"xcm/std",
]
